[package]
name = "manifester"
version = "0.1.0"
authors = ["Tim DuBois <tim@neophilus.net>"]
edition = "2018"

[dependencies]
image = "0.20"
indicatif = "0.9"
globwalk = "0.5"
failure = "0.1"
hashbrown = { version = "0.1", features = ["serde"] }
macro-attr = "0.2"
enum_derive = "0.1.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
