[package]
name = "manifester"
version = "0.1.0"
authors = ["Tim DuBois <tim@neophilus.net>"]
edition = "2018"

[dependencies]
image = "0.21"
rexiv2 = "0.7"
indicatif = "0.11"
globwalk = "0.7"
failure = "0.1"
reqwest = "0.9"
macro-attr = "0.2"
rayon = "1.0"
enum_derive = "0.1.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
url = "1.7"
url_serde = "0.2"
